<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_24dp"
            android:title="@string/menu_history"/>
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_analysis24dp"
            android:title="@string/menu_analysis"/>
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_balance"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_account_24dp"
            android:title="@string/menu_logout"/>

    </group>

</menu>