<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="activityLogin"
            type="com.yuni.myportforlio.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/mailAddress"
                android:textColor="#8d9399"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginMailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxEms="15"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="#788086"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/password"
                android:textColor="#8d9399"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginPassEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="12"
                android:inputType="textPassword"
                android:textColor="#788086"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:onClick="@{() -> activityLogin.loginClick()}"
                android:text="@string/loginText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unregistered"
                android:onClick="@{() -> activityLogin.signUpClick()}"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:onClick="@{() -> activityLogin.signUpClick()}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/test_user"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_mail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_password"/>

        </LinearLayout>
    </RelativeLayout>

</layout>
