<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textUseMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/use_Money"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/thisMonthString"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textUseMoney" />

                <TextView
                    android:id="@+id/monthMoneyResult"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:ems="10"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textMonth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textMonth"
                    app:layout_constraintTop_toTopOf="@+id/textMonth"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/thisWeekString"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textMonth" />

                <TextView
                    android:id="@+id/weekMoneyResult"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textWeek"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.465"
                    app:layout_constraintStart_toEndOf="@+id/textWeek"
                    app:layout_constraintTop_toTopOf="@+id/textWeek"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="TextViewEdits" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/todayString"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textWeek" />

                <TextView
                    android:id="@+id/dayMoneyResult"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:ems="10"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textToday"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.465"
                    app:layout_constraintStart_toEndOf="@+id/textToday"
                    app:layout_constraintTop_toTopOf="@+id/textToday"
                    app:layout_constraintVertical_bias="1.0" />
            </LinearLayout>

            <TextView
                android:id="@+id/textUseMonth"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/spendingThisMonth"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textToday" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/foodExpensesString"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/foodExpenses"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textUseMonth" />

                <TextView
                    android:id="@+id/foodExpensesMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/foodExpensesString"
                    app:layout_constraintStart_toEndOf="@+id/foodExpensesString"
                    app:layout_constraintTop_toTopOf="@+id/foodExpensesString"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dailyGoodsString"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/dailyGoodsString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/foodExpensesString" />

                <TextView
                    android:id="@+id/dailyGoodsMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/dailyGoodsString"
                    app:layout_constraintStart_toEndOf="@+id/dailyGoodsString"
                    app:layout_constraintTop_toTopOf="@+id/dailyGoodsString" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transportationCostsString"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/transportationExpenses"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dailyGoodsString" />

                <TextView
                    android:id="@+id/transportationCostsMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/transportationCostsString"
                    app:layout_constraintStart_toEndOf="@+id/transportationCostsString"
                    app:layout_constraintTop_toTopOf="@+id/transportationCostsString"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datingExpensesString"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/datingExpensesString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transportationCostsString" />

                <TextView
                    android:id="@+id/datingExpensesMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/datingExpensesString"
                    app:layout_constraintStart_toEndOf="@+id/datingExpensesString"
                    app:layout_constraintTop_toTopOf="@+id/datingExpensesString"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/educationCultivationString"
                    android:layout_width="90dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/educationCultivationString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/datingExpensesString" />

                <TextView
                    android:id="@+id/EducationCultivationMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/educationCultivationString"
                    app:layout_constraintStart_toEndOf="@+id/educationCultivationString"
                    app:layout_constraintTop_toTopOf="@+id/educationCultivationString"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beautyClothingString"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/beautyClothingString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/educationCultivationString" />

                <TextView
                    android:id="@+id/BeautyClothingMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/beautyClothingString"
                    app:layout_constraintStart_toEndOf="@+id/beautyClothingString"
                    app:layout_constraintTop_toTopOf="@+id/beautyClothingString" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/otherString"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/otherString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/educationCultivationString" />

                <TextView
                    android:id="@+id/OtherMoney"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="@+id/OtherMoney"
                    app:layout_constraintStart_toEndOf="@+id/OtherMoney"
                    app:layout_constraintTop_toTopOf="@+id/OtherMoney" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>