<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="activityAnalysis"
            type="com.yuni.myportforlio.drawerUI.AnalysisActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/graphSpendingButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{() -> activityAnalysis.onGraphSpendingButtonClick()}"
                    android:text="@string/SpendingString"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/graphIncomeButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{() -> activityAnalysis.onGraphIncomeButtonClick()}"
                    android:text="@string/IncomeString"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/thisMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/monthlySpending"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/totalExpenditureMoney"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:ems="10">
                </com.github.mikephil.charting.charts.PieChart>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:ems="10">
                </com.github.mikephil.charting.charts.BarChart>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>